# webassembly-and-cmake

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  package.json  readme.md
src/: WebAssemblyAndCMake.h.in  index.html  main.cpp  main.ts
